--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
  <link rel="stylesheet" href="styles.css">
 <meta name="viewport" content="width=device-
 width, initial-scale=1.0">
-<link rel="icon" type="image/png" href="blitzzrng.png">
+<link rel="icon" type="image/png" href="#">
  <meta name="description" content=" easiest way to search up a bible verse! ">
 <title> biblesearch </title>
 </head>
  <body>
 <h1>Bible Search</h1>
-<p>biblesearch allows for an easy search of <b>any</b> bible verse.</p> <br>
-<p>biblesearch uses <a href="https://bible-api.com/">bible-api.com</a> to grab verses in the </p> <br>
-<p>World English Bible translation.</p> <br>
+<p>biblesearch allows for an easy search of <b>any</b> bible verse.</p> 
+<p>biblesearch uses <a href="https://bible-api.com/">bible-api.com</a> to grab verses in the </p> 
+<p>World English Bible translation.</p> 
 <div id="selectVerse">
   <h2> How To Use The Tool</h2>
   <p>First, select the book of the Bible you are looking up.</p> <br>
-  <p>Then, search up the verse.</p> <br>
-  <p>As an example, if you wanted to search up "John 3:16"</p> <br>
+  <p>Then, search up the verse.</p> 
+  <p>As an example, if you wanted to search up "John 3:16"</p> 
   <p>you would select "John" as the book, then type "3:16" im the verse and chapter.</p>
   
   <label>Bible Books</label>
@@ -94,9 +94,10 @@ width, initial-scale=1.0">
     <option value="jude">Jude</option>
     <option value="revelation">Revelation</option>
   </optgroup>
-</select>
+</select> <br>
 <label>Bible Verse and Chapter</label>
 <input type="text" id="bibleVerseAndChap" name="bibleVerseAndChapter" placeholder="i.e. 3:16">
 </div>
+  <script src="scripts.js"></script>
  </body>
 </html>
