--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@ width, initial-scale=1.0">
 <label>Bible Verse and Chapter</label>
 <input type="text" id="bibleVerseAndChap" name="bibleVerseAndChapter" placeholder="i.e. 3:16">
 </div>
-  <script src="scripts.js"></script>
+ <p id="verseName"> Name not loaded </p> 
+ <p id="verseText"> Text not loaded </p>
+  
+  
+<script src="scripts.js"></script>
  </body>
 </html>
