--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ width, initial-scale=1.0">
 <p>biblesearch uses <a href="https://bible-api.com/">bible-api.com</a> to grab verses in the </p> 
 <p>World English Bible translation.</p> 
 <div id="selectVerse">
-  <h2> How To Use The Tool</h2>
+  <h2> How To Use The Tool:</h2>
   <p>First, select the book of the Bible you are looking up.</p> <br>
   <p>Then, search up the verse.</p> 
   <p>As an example, if you wanted to search up "John 3:16"</p> 
