--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ width, initial-scale=1.0">
 <title> biblesearch </title>
 </head>
  <body>
-<h1>Bible Search</h1>
+<h1>biblesearch</h1>
 <p>biblesearch allows for an easy search of <b>any</b> bible verse.</p> 
 <p>biblesearch uses <a href="https://bible-api.com/">bible-api.com</a> to grab verses in the </p> 
 <p>World English Bible translation.</p> 
