--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ width, initial-scale=1.0">
 </head>
  <body>
 <h1>biblesearch</h1>
-<p>biblesearch allows for an easy search of <b>any</b> bible verse.</p> 
+<p>biblesearch allows for an easy search of <b>any</b> bible verse!</p> 
 <p>biblesearch uses <a href="https://bible-api.com/">bible-api.com</a> to grab verses in the </p> 
 <p>World English Bible translation.</p> 
 <div id="selectVerse">
