--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ width, initial-scale=1.0">
   <p>First, select the book of the Bible you are looking up.</p> <br>
   <p>Then, search up the verse.</p> 
   <p>As an example, if you wanted to search up "John 3:16"</p> 
-  <p>you would select "John" as the book, then type "3:16" im the verse and chapter.</p>
+  <p>you would select "John" as the book, then type "3:16" in the verse and chapter.</p>
   
   <label>Bible Books</label>
   <select id="bibleBooks" name="BookSelector">
