--- a/index.html
+++ b/index.html
@@ -99,9 +99,10 @@ width, initial-scale=1.0">
 <input type="text" id="bibleVerseAndChap" name="bibleVerseAndChapter" placeholder="i.e. 3:16">
 <button onclick="findVerse()" id="findButton">Find Verse</button>
 </div>
- <p id="verseName"> Name not loaded </p> 
+<div id="fullVerses">
+  <p id="verseName"> Name not loaded </p> 
  <p id="verseText"> Text not loaded </p>
-  
+</div>
 
 <script src="scripts.js"></script>
  </body>
