--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 width, initial-scale=1.0">
 <link rel="icon" type="image/png" href="bible-icon.PNG">
  <meta name="description" content=" easiest way to search up a bible verse! ">
-<title> VerSearh </title>
+<title> VerSearch </title>
 </head>
  <body>
 <h1>VerSearch</h1>
