--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ width, initial-scale=1.0">
 </div>
 
  <div class="footer">
-<button onclick="darkOrLight() id="darklight">Dark/Light</button>
+<button onclick="darkOrLight()" id="darklight">Dark/Light</button>
  </div>
 
 <script src="scripts.js"></script>
