--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@ width, initial-scale=1.0">
   <p>As an example, if you wanted to search up "John 3:16"</p> 
   <p>you would select "John" as the book, then type "3:16" in the verse and chapter.</p>
  <p>If you want want to search up an entire chapter, you can just type the chapter (i.e. "John 3")</p>
+ <p>Then, you can select the translation. The default is the World English Bible. </p>
   
-  <label>Bible Books</label>
+  <label>Bible Books:</label>
   <select id="bibleBooks" name="BookSelector">
   <optgroup label="Old Testament">
     <option value="genesis">Genesis</option>
@@ -96,9 +97,20 @@ width, initial-scale=1.0">
     <option value="revelation">Revelation</option>
   </optgroup>
 </select> <br>
-<label>Bible Verse and Chapter</label> 
+<label>Bible Verse and Chapter:</label> 
 <input type="text" id="bibleVerseAndChap" name="bibleVerseAndChapter" placeholder="i.e. 3:16"> <br>
-<button onclick="findVerse()" id="findButton">Find Verse</button>
+ <label>Translations:</label>
+ <select id="translations" name="Translations">
+<optgroup label="English">
+<option value="kjv">King James Version (KJV)</option>
+<option value="asv">American Standard Version (ASV)</option>
+<option value="web">World English Bible (WEB)</option>
+</optgroup>
+ <optgroup label="Latin">
+<option value="clementine">Clementine Latin Vulgate</option>
+ </optgroup>
+</select>
+ <button onclick="findVerse()" id="findButton">Find Verse</button>
 </div>
 <div id="fullVerses">
   <p id="verseName"> Name not loaded </p> 
