--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@ width, initial-scale=1.0">
  <body>
 <h1>versearch</h1>
 <p>versearch allows for an easy search of <b>any</b> bible verse.</p> 
-<p>versearch <a href="https://bible-api.com/">bible-api.com</a> to grab verses in the </p> 
-<p>World English Bible translation!</p> 
+<p>Want more information? Click <a href="info.html">here</a> to visit the info page</p>
 <div id="selectVerse">
   <h2> How To Use The Tool:</h2>
   <p>First, select the book of the Bible you are looking up.</p>
