--- a/info.html
+++ b/info.html
@@ -17,5 +17,7 @@ width, initial-scale=1.0">
 <p>Credits to Tim Morgan for creating the <a href="https://bible-api.com/">bible-api.com</a> website and making this possible. </p>
 <img class="gif"src="godisreal.gif">
 
+ <p><a href="index.html"> back </a></p>
+
  </body>
 </html>
