--- a/info.html
+++ b/info.html
@@ -10,12 +10,12 @@ width, initial-scale=1.0">
 <title> † versearch - info † </title>
 </head>
  <body>
-<h1>versearch</h1> <br>
+<img class="gif"src="godisreal.png">
+ <h1>versearch</h1> <br>
 <h2>Mission</h2>
 <p>versearch's mission is to spread the Word of God by providing a quick and easy bible verse look-up, all for free.</p><br>
 <h2>Credits</h2>
 <p>Credits to Tim Morgan for creating the <a href="https://bible-api.com/">bible-api.com</a> website and making this possible. </p>
-<img class="gif"src="godisreal.gif">
 
  <p><a href="index.html"> back </a></p>
 
