--- a/info.html
+++ b/info.html
@@ -16,7 +16,8 @@ width, initial-scale=1.0">
 <p>versearch's mission is to spread the Word of God by providing a quick and easy bible verse look-up, all for free.</p><br>
 <h2>Credits</h2>
 <p>Credits to Tim Morgan for creating the <a href="https://bible-api.com/">bible-api.com</a> website and making this possible. </p>
-
+<h2>More Websites!</h2>
+<p>Would you like more bible content, click <a href="https://blog.versear.ch">here</a></p>
  <p><a href="index.html"> back </a></p>
 
  </body>
